# sparklepost

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md
examples/: complete.rs
src/: lib.rs  message.rs  transmission.rs
src/transmission/: message.rs  mod.rs  models.rs  recipients.rs
