[package]
name = "sparkpost"
version = "0.5.4"
authors = ["mygnu <tech@hgill.io>"]
keywords = ["email", "sparkpost","reqwest"]
description = "Rust bindings for sparkpost email api v1"
documentation = "https://docs.rs/crate/sparkpost"
repository = "https://gitlab.com/mygnu/spark_post"
readme="README.md"
license="MPL-2.0+/LGPL-3.0+"
categories = ["api-bindings","web-programming"]


[dependencies]
reqwest={version = "0.10", features = ["blocking", "json"]}
serde_json="1.0"
serde_derive = "1.0"
serde = "1.0"
chrono = {version = "0.4", features = ["serde"]}

[dev-dependencies]
base64 = "0.12"
lazy_static = "1.4"
dotenv = "0.15"
pretty_assertions = "0.6"

[badges]
#gitlab = {repository = "https://gitlab.com/mygnu/spark_post"}
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
opt-level = 3
