[package]
name = "sparklepost"
version = "0.5.5"
authors = [
    "mygnu <tech@hgill.io>",
    "Rob Ede <robjtede@icloud.com>",
]
keywords = ["email", "sparkpost", "reqwest"]
description = "Bindings for Sparkpost email API v1"
repository = "https://github.com/x52dev/sparklepost"
license = "MPL-2.0+/LGPL-3.0+"
categories = ["api-bindings", "web-programming"]
edition = "2021"
rust-version = "1.64"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
base64 = "0.22"
dotenvy = "0.15"
pretty_assertions = "1"

[lints.rust]
rust_2018_idioms = { level = "deny" }
future_incompatible = { level = "deny" }
nonstandard_style = { level = "deny" }
missing_debug_implementations = { level = "deny", priority = 1 }

[lints.clippy]
clone_on_ref_ptr = { level = "deny" }
